--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "express": "^4.11.1",
     "websocket": "^1.0.23",
-    "yargs": "^8.0.1"
+    "yargs": "^8.0.1",
+    "cookie-parser": "1.4.4",
+    "bcryptjs": "2.4.3"
   },
   "devDependencies": {
     "angular": "1.3.4",
@@ -41,6 +43,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "smoothie": "^1.27.0",
-    "sortablejs": "^1.4.2"
+    "sortablejs": "^1.4.2",
+    "prompts": "2.0.4"
   }
 }
