--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "websocket": "^1.0.23",
     "yargs": "^8.0.1",
     "cookie-parser": "1.4.4",
-    "bcryptjs": "2.4.3"
+    "bcryptjs": "2.4.3",
+    "prompts": "2.0.4"
   },
   "devDependencies": {
     "angular": "1.3.4",
@@ -43,7 +44,6 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "smoothie": "^1.27.0",
-    "sortablejs": "^1.4.2",
-    "prompts": "2.0.4"
+    "sortablejs": "^1.4.2"
   }
 }
